@@ -18,108 +18,90 @@ import de.se_rwth.commons.logging.Log;
 import java.util.stream.Collectors;
 
 public class CDInterfaceAndEnumSymbolTableCompleter implements CDInterfaceAndEnumVisitor2 {
-
+  
   protected ISynthesize typeSynthesizer;
-
+  
   public CDInterfaceAndEnumSymbolTableCompleter(ISynthesize typeSynthesizer) {
     this.typeSynthesizer = typeSynthesizer;
   }
-
+  
   public CDInterfaceAndEnumSymbolTableCompleter() {
     this(new FullSynthesizeFromMCBasicTypes());
   }
-
+  
   @Override
   public void endVisit(ASTCDInterface node) {
     initialize_CDInterface(node);
   }
-
+  
   @Override
   public void endVisit(ASTCDEnum node) {
     initialize_CDEnum(node);
   }
-
+  
   @Override
   public void endVisit(ASTCDEnumConstant node) {
     initialize_CDEnumConstant(node);
   }
-
+  
   protected void initialize_CDInterface(ASTCDInterface ast) {
     CDTypeSymbol symbol = ast.getSymbol();
     symbol.setIsInterface(true);
-
+    
     setupModifiers(ast.getModifier(), symbol);
-
+    
     if (ast.isPresentCDExtendUsage()) {
-      symbol.addAllSuperTypes(
-          ast.getCDExtendUsage()
-              .streamSuperclass()
-              .map(
-                  s -> {
-                    final TypeCheckResult result = getTypeSynthesizer().synthesizeType(s);
-                    if (!result.isPresentResult()) {
-                      Log.error(
-                          String.format(
-                              "0xCDA30: The type of the extended interfaces (%s) could not be calculated",
-                              CDInterfaceAndEnumMill.prettyPrint(s, false)),
-                          s.get_SourcePositionStart());
-                    }
-                    return result;
-                  })
-              .filter(TypeCheckResult::isPresentResult)
-              .map(TypeCheckResult::getResult)
-              .collect(Collectors.toList()));
+      symbol.addAllSuperTypes(ast.getCDExtendUsage().streamSuperclass().map(s -> {
+        final TypeCheckResult result = getTypeSynthesizer().synthesizeType(s);
+        if (!result.isPresentResult()) {
+          Log.error(String.format(
+              "0xCDA30: The type of the extended interfaces (%s) could not be calculated",
+              CDInterfaceAndEnumMill.prettyPrint(s, false)), s.get_SourcePositionStart());
+        }
+        return result;
+      }).filter(TypeCheckResult::isPresentResult).map(TypeCheckResult::getResult).collect(Collectors
+          .toList()));
     }
   }
-
+  
   protected void initialize_CDEnum(ASTCDEnum ast) {
     CDTypeSymbol symbol = ast.getSymbol();
     symbol.setIsEnum(true);
-
+    
     setupModifiers(ast.getModifier(), symbol);
-
+    
     if (ast.isPresentCDInterfaceUsage()) {
-      symbol.addAllSuperTypes(
-          ast.getCDInterfaceUsage()
-              .streamInterface()
-              .map(
-                  s -> {
-                    final TypeCheckResult result = getTypeSynthesizer().synthesizeType(s);
-                    if (!result.isPresentResult()) {
-                      Log.error(
-                          String.format(
-                              "0xCDA31: The type of the interface (%s) could not be calculated",
-                              s.getClass().getSimpleName()),
-                          s.get_SourcePositionStart());
-                    }
-                    return result;
-                  })
-              .filter(TypeCheckResult::isPresentResult)
-              .map(TypeCheckResult::getResult)
-              .collect(Collectors.toList()));
+      symbol.addAllSuperTypes(ast.getCDInterfaceUsage().streamInterface().map(s -> {
+        final TypeCheckResult result = getTypeSynthesizer().synthesizeType(s);
+        if (!result.isPresentResult()) {
+          Log.error(String.format("0xCDA31: The type of the interface (%s) could not be calculated",
+              s.getClass().getSimpleName()), s.get_SourcePositionStart());
+        }
+        return result;
+      }).filter(TypeCheckResult::isPresentResult).map(TypeCheckResult::getResult).collect(Collectors
+          .toList()));
     }
   }
-
+  
   protected void initialize_CDEnumConstant(ASTCDEnumConstant ast) {
     // this is probably dead code, since it is never executed
     FieldSymbol symbol = ast.getSymbol();
-
+    
     symbol.setIsStatic(true);
     symbol.setIsReadOnly(true);
     symbol.setIsFinal(true);
     symbol.setIsPublic(true);
-
+    
     // create a SymType for the enum, because the type of the enum constant is the enum itself
     final String enumName = ast.getEnclosingScope().getName();
     // call getEnclosingScope() twice, to achieve the correct package name
-    final SymTypeOfObject typeObject =
-        SymTypeExpressionFactory.createTypeObject(
-            enumName, ast.getEnclosingScope().getEnclosingScope());
+    final SymTypeOfObject typeObject = SymTypeExpressionFactory.createTypeObject(enumName, ast
+        .getEnclosingScope().getEnclosingScope());
     symbol.setType(typeObject);
-
+    
     // Don't store the arguments in the ST
   }
-
+  
   public void setupModifiers(ASTModifier modifier, CDTypeSymbol typeSymbol) {
     typeSymbol.setIsPublic(modifier.isPublic());
     typeSymbol.setIsPrivate(modifier.isPrivate());
@@ -128,12 +110,11 @@ public class CDInterfaceAndEnumSymbolTableCompleter implements CDInterfaceAndEnu
     typeSymbol.setIsAbstract(modifier.isAbstract());
     typeSymbol.setIsDerived(modifier.isDerived());
   }
-
-  public ISynthesize getTypeSynthesizer() {
-    return typeSynthesizer;
-  }
-
+  
+  public ISynthesize getTypeSynthesizer() { return typeSynthesizer; }
+  
   public void setTypeSynthesizer(ISynthesize typeSynthesizer) {
     this.typeSynthesizer = typeSynthesizer;
   }
+  
 }
